<resources>
    <string name="app_name">s326197mappe1me.kvalheim</string>

    <!--Startside-->
    <string name="spill_text">Start spill</string>
    <string name="statistikk_text">Se statistikk</string>
    <string name="settings_text">Preferanser</string>
    <string name="welcome_text">Gautes App Name</string>

    <!--Strings til spill-siden-->
    <string name="did_it_text" translatable="false">DID IT!</string>
    <string name="exit_game">Avslutt Spill</string>

    <!--Lagre verdier-->
    <string name="statistikk_fil" translatable="false">Statistikk</string>
    <string name="preferanser_fil" translatable="false">prefererences_file</string>

    <!--Språk strings-->
    <string name="norsk_text" translatable="false">Norsk</string>
    <string name="tysk_text" translatable="false">Tysk</string>
    <string name="back_button">Tilbake</string>
    <string name="tavlebilde">bilde av tavle</string>

    <integer name="preferanse_5">5</integer>
    <integer name="preferanse_10">10</integer>
    <integer name="preferanse_25">25</integer>
    <string name="language_no" translatable="false">Norsk</string>
    <string name="language_de" translatable="false">Deutsche</string>
    <string name="language_default" translatable="false">Norsk</string>


    <string name="math_text" translatable="false">=?</string>
    <string name="equals_sign" translatable="false">=</string>
    <string name="num_back" translatable="false"><![CDATA[<-]]></string>
    <string name="go_button" translatable="false">Go</string>
    <string name="hint_button" translatable="false">Hint</string>
    <string name="answer_text" translatable="false">13</string>
    <string name="delete_answer" translatable="false">X</string>
    <string name="correct">Riktig!</string>
    <string name="incorrect">Feil!</string>
    <string name="stat_title1">Antall riktig</string>
    <string name="stat_title2">Antall feil</string>
    <string name="delete_statistics_btn">slett</string>
    <string name="preferanser_header" translatable="false">Preferanser</string>
    <string name="game_length_text">Antall oppgaver</string>
    <string name="preferences_lang">språk</string>
    <string name="result_default" translatable="false">0</string>
    <string name="round_finished_message">Du fikk %d rette og %d feil! Ønsker du å starte ny runde?</string>
    <string name="exit_game_early_message">Er du sikker på at du ønsker å avslutte før spillet er ferdig?</string>
    <string name="exit_game_early_title">Sikker?</string>
    <string name="click_no">Nei</string>
    <string name="click_yes">Ja</string>
    <string name="round_finished_title">Runden er ferdig</string>
    <string name="no_more_title">Ferdig!</string>
    <string name="no_more_message">Det er ingen flere oppgaver.</string>
    <string name="click_ok">Ok</string>
    <integer name="stat_correct_default">0</integer>
    <integer name="stat_incorrect_default">0</integer>

    <!--NumPad-->
    <integer name="num_7">7</integer>
    <integer name="num_8">8</integer>
    <integer name="num_9">9</integer>
    <integer name="num_4">4</integer>
    <integer name="num_5">5</integer>
    <integer name="num_6">6</integer>
    <integer name="num_1">1</integer>
    <integer name="num_2">2</integer>
    <integer name="num_3">3</integer>
    <integer name="num_0">0</integer>

    <!--Regnestykker-->
    <string-array name="math_questions">
        <item name="math_1">1+3</item>
        <item name="math_2">4+0</item>
        <item name="math_3">9+9</item>
        <item name="math_4">6+3</item>
        <item name="math_5">2+7</item>

        <item name="math_6">2+8</item>
        <item name="math_7">8+8</item>
        <item name="math_8">2+3</item>
        <item name="math_9">1+9</item>
        <item name="math_10">1+5</item>

        <item name="math_11">4+4</item>
        <item name="math_12">4+8</item>
        <item name="math_13">4+1</item>
        <item name="math_14">1+2</item>
        <item name="math_15">7+6</item>

        <item name="math_16">8+5</item>
        <item name="math_17">0+7</item>
        <item name="math_18">5+5</item>
        <item name="math_19">3+3</item>
        <item name="math_20">1+1</item>

        <item name="math_21">6+6</item>
        <item name="math_22">6+9</item>
        <item name="math_23">9+3</item>
        <item name="math_24">2+6</item>
        <item name="math_25">2+2</item>
    </string-array>

</resources>
