<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PreferanserActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:stretchColumns="*"
    >
    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:background="@color/primary"
        android:layout_marginBottom="80dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:height="180dp"
            android:gravity="center"
            android:textColor="@color/icons"
            android:textSize="22sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:text="@string/welcome_text"
            android:layout_width="0dp"
            android:textColor="@color/primary_text"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        >
        <Button
            android:id="@+id/preferanse_button_1"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:text="@integer/preferanse_5"
            android:background="@drawable/buttons"
            android:onClick="selectPreference"
            />
        <Button
            android:id="@+id/preferanse_button_2"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:text="@integer/preferanse_10"
            android:background="@drawable/buttons"
            android:onClick="selectPreference"/>
        <Button
            android:id="@+id/preferanse_button_3"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:text="@integer/preferanse_25"
            android:background="@drawable/buttons"
            android:onClick="selectPreference"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:text="@string/welcome_text"
            android:layout_width="0dp"
            android:textColor="@color/primary_text"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp">
        <Button
            android:id="@+id/norsk_button"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:text="@string/norsk_text"
            android:background="@drawable/buttons"
            android:onClick="selectLanguage"/>
        <Button
            android:id="@+id/tysk_button"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:text="@string/tysk_text"
            android:background="@drawable/buttons"
            android:onClick="selectLanguage"/>
    </TableRow>
    <TableRow
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="@string/back_button"
            android:onClick="goBack"/>
    </TableRow>
</TableLayout>
