<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/watercolour"
    >

    <!--<RelativeLayout-->
        <!--android:id="@+id/header_box"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="180dp"-->
        <!--android:background="@color/primary">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:text="@string/welcome_text"-->
            <!--android:textColor="@color/icons"-->
            <!--android:textSize="22sp"/>-->
    <!--</RelativeLayout>-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/spill_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:drawableStart="@drawable/ic_play_arrow_black_24dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="180dp"
            android:text="@string/spill_text"
            android:background="@color/primary"
            android:onClick="play"
            android:textColor="@color/icons"/>

        <Button
            android:id="@+id/statistikk_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/spill_button"
            android:layout_centerHorizontal="true"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:drawableStart="@drawable/ic_show_chart_black_24dp"
            android:text="@string/statistikk_text"
            android:background="@color/colorPrimary"
            android:textColor="@color/icons"
            android:onClick="statistics"/>


        <Button
            android:id="@+id/preferanser_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/settings_text"
            android:layout_below="@+id/statistikk_button"
            android:drawableStart="@drawable/ic_settings_black_24dp"
            android:background="@color/accent"
            android:layout_centerHorizontal="true"
            android:onClick="preferanser"
            android:textColor="@color/icons"/>
    </RelativeLayout>
</RelativeLayout>